@@ -1,3 +1,6 @@
+2023-01-05  Markus Gans  <guru.mail@muenster.de>
+	* Bugfix for broken scrollbar behavior in FScrollView widget
+
 2023-01-04  Markus Gans  <guru.mail@muenster.de>
 	* FObject now supports reverse iterators
 	* Small improvement of the display speed
